fix(about-me): sizes on mobile and desktop fixed

--- a/src/app/components/about-me/about-me.component.scss
+++ b/src/app/components/about-me/about-me.component.scss
@@ -16,14 +16,9 @@ $separation-mobile: 20px;
     width: 100%;
     height: 100%;
 
-    .title_section {
-      font-size: 24px;
-      margin-bottom: 42px;
-    }
-
     .tabs {
       width: 100%;
-      height: 400px;
+      height: 450px;
       overflow: hidden;
       // box-shadow: 0 0 5px #ccc;
       gap: 30px;
@@ -155,17 +150,21 @@ $separation-mobile: 20px;
           margin: 0;
         }
 
+        .org, .repo {
+          gap: 5px;
+        }
+
         .repo {
           margin-bottom: 16px;
-
-          p {
-            margin-bottom: 12px;
-          }
         }
 
         .link {
           list-style: none;
           text-decoration: none;
+
+          &.zero {
+            color: rgb(106, 177, 127);
+          }
 
           &.one {
             color: rgb(107, 255, 152);
@@ -179,7 +178,7 @@ $separation-mobile: 20px;
         .user {
           justify-content: flex-start;
           gap: 5px;
-          margin: 5px 0 15px 0;
+          margin: 5px 0 0 0;
           color: $txt-secondary-color;
 
           .user-img {
