--- a/src/app/components/button/button.component.scss
+++ b/src/app/components/button/button.component.scss
@@ -4,6 +4,7 @@
 
 .content {
   position: relative;
+  height: 100% !important;
 
   .btn {
     display: flex;
